# RayWaves-GameEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  clang-format.txt  compile_commands.json  config.ini  plan.md
Distribution/: README.md  build_gamelogic.bat  create_distribution.bat  dist_CMakeLists.txt  distribute.ps1
Distribution/Templates/: .gitignore
Distribution/Templates/DemoGame/: DemoLevel.lib  project.raywaves
Distribution/Templates/DemoGame/.raywaves/: CMakeLists.txt  layout.ini
Distribution/Templates/DemoGame/GameLogic/: DemoLevel.cpp  DemoLevel.h  DemoMainMenu.cpp  DemoMainMenu.h  GameCamera.cpp  GameCamera.h  Player.cpp  Player.h  RootManager.cpp  Slime.cpp
Distribution/Templates/Empty/: project.raywaves
Distribution/Templates/Empty/.raywaves/: CMakeLists.txt  layout.ini
Distribution/Templates/Empty/GameLogic/: EmptyMap.cpp  EmptyMap.h  RootManager.cpp
Distribution/Templates/Platformer2D/: README.md  RootManager.lib  project.raywaves
Distribution/Templates/Platformer2D/.raywaves/: CMakeLists.txt  layout.ini
Distribution/Templates/Platformer2D/GameLogic/: GameCamera.cpp  GameCamera.h  PlatformerMap.cpp  PlatformerMap.h  RootManager.cpp
Distribution/Templates/SlimeQuest/: project.raywaves
Distribution/Templates/SlimeQuest/GameLogic/: DemoLevel.cpp  DemoLevel.h  DemoMainMenu.cpp  DemoMainMenu.h  GameCamera.cpp  Player.cpp  Player.h  RootManager.cpp  Slime.cpp  Slime.h
Documentation/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  DISTRIBUTION_GUIDE.md  GAME_DEVELOPER_GUIDE.md  GUIDE_FUNDAMENTALS.md  GUIDE_REFERENCE.md  README_DISTRIBUTION.md  TROUBLESHOOTING.md
Editor/: EditorPreferences.cpp  EditorPreferences.h  EditorUtils.cpp  EditorUtils.h  FileAssociation.cpp  FileAssociation.h  GameEditor.cpp  GameEditor.h  GameEditorLayout.h  GameEditorTheme.h  ProcessRunner.cpp  ProcessRunner.h  app.aps
Editor/Panels/: EditorPreferencesPanel.cpp  EditorPreferencesPanel.h  ExportPanel.cpp  ExportPanel.h  IEditorPanel.h  MainMenuBar.cpp  MainMenuBar.h  MapSelectionPanel.cpp  MapSelectionPanel.h  MessageLogPanel.cpp  MessageLogPanel.h  PerformanceOverlay.cpp  PerformanceOverlay.h  SceneSettingsPanel.cpp  SceneSettingsPanel.h  SceneWindow.cpp  SceneWindow.h
Editor/rlImGui/: rlImGui.cpp
Editor/terminal/: terminal.cpp  terminal.h  types.h
Engine/: AssetResolver.cpp  AssetResolver.h  GameConfig.cpp  GameConfig.h  GameEngine.cpp  GameEngine.h  GameMap.cpp  GameMap.h  GameState.h  MapManager.cpp  MapManager.h  Profiler.cpp  Profiler.h  Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h  raygui_impl.cpp
Game/: DllLoader.cpp  DllLoader.h  game.cpp  main.cpp
GameLogic/: DemoLevel.cpp  DemoLevel.h  DemoMainMenu.cpp  Player.cpp  Player.h  RootManager.cpp
Tests/: AssetResolver_t.cpp  GameConfig_t.cpp  GameEditor_t.cpp  GameMap_t.cpp  MapManager_t.cpp  PerfBenchmark_t.cpp  Profiler_t.cpp  ProjectManager_t.cpp  Project_t.cpp  SmokeTest.cpp  StateBag_t.cpp  config.ini  main.cpp  run_all.bat  run_smoketest.bat  run_tests.bat
Tools/: run_analysis.bat  setup_zig.ps1  zig-cc.bat  zig-cxx.bat
test_proj/.raywaves/: CMakeLists.txt
